# CPU_simulation

./: CMakeLists.txt  README.md
include/: alu.h  d_ff.h  data_memory.h  gates.h  instruction_memory.h  instruction_register.h  monitor.h  mux.h  opcode.h  opcode_decoder.h  pc.h  register_file.h
src/: main.cpp
